# ur_robot_gripper_moveit

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: gazebo_ur5_with_robotiq_2f_85.urdf  gazebo_ur5_with_robotiq_2f_85_camera.urdf  joint_limits.yaml  ros_controllers.yaml  ur5_with_robotiq_2f_85.srdf
launch/: gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml
meshes/frame/collision/: frame.stl
meshes/realsense/collision/: realsense.stl
meshes/realsense/visual/: realsense.dae
meshes/scanner/collision/: scanner.stl
meshes/scanner/visual/: scanner.dae
meshes/tray/collision/: grasping_tray.stl
src/ur5_gripper_moveit/: moveit_scene.py
ur5_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_gripper_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  joint_limits_bak.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur5_with_robotiq_2f_85.ros2_control.xacro  ur5_with_robotiq_2f_85.srdf  ur5_with_robotiq_2f_85.urdf  ur5_with_robotiq_2f_85.urdf bak.xacro  ur5_with_robotiq_2f_85.urdf.xacro
ur5_gripper_moveit_config/doc/: add_objects_to_the_scene.md  motion_planning.md
ur5_gripper_moveit_config/launch/: demo.launch.py  motion_planning_api_tutorial.launch.py  move_group.launch.py  move_group_add_mesh_tutorial.launch.py  move_group_interface_tutorial.launch.py  move_group_tutorial.launch.py  moveit_rviz.launch.py  moveit_rviz.rviz  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  test_launch.launch.py  warehouse_db.launch.py
ur5_gripper_moveit_config/src/: motion_planning_api_tutorial.cpp  move_group_add_mesh.cpp  move_group_interface_tutorial.cpp  robot_model_and_robot_state_tutorial.cpp
(+1 files in other folders)
